Updated README.md file, added Java project to repo